Bug 419275 - QIF Im-/Exporter do not have default profile in dropdown after initial installation
Summary: QIF Im-/Exporter do not have default profile in dropdown after initial instal...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: exporter (other bugs)
Version First Reported In: 5.0.8
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-26 21:59 UTC by a94c4737
Modified: 2020-07-19 13:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments
Screenshot of Bug (358.89 KB, image/png)
2020-03-26 21:59 UTC, a94c4737
Details
QIF Importer Default Profile (387.38 KB, image/png)
2020-03-26 21:59 UTC, a94c4737
Details
QIF Exporter Default Profile (386.82 KB, image/png)
2020-03-26 22:01 UTC, a94c4737
Details

Note You need to log in before you can comment on or make changes to this bug.
Description a94c4737 2020-03-26 21:59:20 UTC
Created attachment 127034 [details]
Screenshot of Bug

SUMMARY

macOS QIF exporter does not display QIF Profile dropdown menu.


STEPS TO REPRODUCE
1. File -> Export -> QIF menu item 
2. 
3. 

OBSERVED RESULT

Export Button Greyed 
QIF Dropdown Menu can not be clicked to display options 

(Screenshot attached)

EXPECTED RESULT

QIF Dropdown menu profile selection available as shown in docs here - https://docs.kde.org/stable5/en/extragear-office/kmymoney/details.impexp.qifexp.html

Export Button not Greyed 


Please Note - Default QIF Profile exists under Preferences -> Plugins -> QIF Importer

SOFTWARE/OS VERSIONS
Windows: 
macOS: 10.15.4
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION

KMyMoney Version 5.0.80-c404e6723
Comment 1 a94c4737 2020-03-26 21:59:55 UTC
Created attachment 127035 [details]
QIF Importer Default Profile
Comment 2 a94c4737 2020-03-26 22:01:04 UTC
Created attachment 127036 [details]
QIF Exporter Default Profile
Comment 3 Thomas Baumgart 2020-03-27 07:26:28 UTC
Good catch.

Workaround: open the profile in the plugins configuration section as you have done to take the screenshots to prove that the Default profile exists. Press OK there and leave the settings with OK. This will persistently store the Default profile (which is created when you enter that dialog and it does not exist on file). Now it can be found by the QIF im- and exporter.

Can you verify that this works for you?
Comment 4 a94c4737 2020-03-27 12:34:55 UTC
Yes, it does : ) 

Thank you!
Comment 5 Bug Janitor Service 2020-04-11 04:33:08 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 6 Thomas Baumgart 2020-04-11 10:03:17 UTC
I updated the summary to reflect the real problem and updated the status.
Comment 7 Thomas Baumgart 2020-07-19 10:41:44 UTC
Git commit 84ff905e32aabfb2473a25f650c1f8bd40e2e5b2 by Thomas Baumgart.
Committed on 19/07/2020 at 10:33.
Pushed by tbaumgart into branch '5.1'.

Create default QIF profile if it does not exist yet
FIXED-IN: 5.1.1

M  +12   -0    kmymoney/plugins/qif/export/kexportdlg.cpp
M  +11   -0    kmymoney/plugins/qif/import/kimportdlg.cpp

https://invent.kde.org/office/kmymoney/commit/84ff905e32aabfb2473a25f650c1f8bd40e2e5b2
Comment 8 Thomas Baumgart 2020-07-19 13:11:28 UTC
Git commit df894aef28fc13c00f05c7ee63acf4d13d26a005 by Thomas Baumgart.
Committed on 19/07/2020 at 11:00.
Pushed by tbaumgart into branch 'master'.

Create default QIF profile if it does not exist yet

(cherry picked from commit 84ff905e32aabfb2473a25f650c1f8bd40e2e5b2)

M  +12   -0    kmymoney/plugins/qif/export/kexportdlg.cpp
M  +11   -0    kmymoney/plugins/qif/import/kimportdlg.cpp

https://invent.kde.org/office/kmymoney/commit/df894aef28fc13c00f05c7ee63acf4d13d26a005