Create default QIF profile if it does not exist yet

BUG: 419275

(cherry picked from commit 84ff905e32aabfb2473a25f650c1f8bd40e2e5b2)